--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@ input:focus, select:focus { outline: none; border-color: #667eea; box-shadow: 0 
 
 <script src="data.js"></script>
 <script src="logic.js"></script>
+<script src="validation.js"></script>
 <script src="ui.js"></script>
 </body>
 </html>
