Harden maintenance recommendations UI

--- a/index.html
+++ b/index.html
@@ -34,12 +34,14 @@ input:focus, select:focus { outline: none; border-color: #667eea; box-shadow: 0 
 .priority-badge.high { background: #ffa502; color: white; }
 .priority-badge.medium { background: #3742fa; color: white; }
 .priority-badge.low { background: #5f27cd; color: white; }
+.priority-count { color: #666; font-size: 0.9em; }
 .service-item { background: #f8f9fa; padding: 20px; border-radius: 8px; margin-bottom: 12px; display: grid; grid-template-columns: 1fr auto; gap: 20px; align-items: center; transition: all 0.3s; border: 2px solid transparent; }
 .service-item:active { background: #fff; border-color: #667eea; }
 .service-item.selected { background: #e8eaff; border-color: #667eea; }
 .service-info { flex: 1; }
 .service-name { font-weight: 600; font-size: 1.1em; margin-bottom: 4px; color: #333; }
 .service-details { font-size: 0.9em; color: #666; }
+.service-overdue { color: #ff4757; font-weight: 600; }
 .service-price { text-align: right; }
 .price-amount { font-size: 1.4em; font-weight: 700; color: #2ed573; }
 .labor-hours { font-size: 0.85em; color: #666; }
